# aletheia

./: AGENTS.md  Dockerfile  Makefile  README.md  aletheia.md  docker-compose.yml  pyproject.toml
scripts/: clean-cache.sh  parallel-execution-plan.md  verify_scip_ingestion.py
src/: TODO.md
src/backend/: celery_app.py  config.py  job_store.py  main.py  security.py
src/backend/api/: chat.py  doc.py  graph.py  health.py  ingest.py  nav.py  research.py  wiki.py
src/backend/middleware/: error_handler.py  logging.py  rate_limit.py
src/frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
src/frontend/src/: App.tsx  index.css
src/graph/: __init__.py  bulk_loader.py  cache.py  client.py  cluster_service.py  exceptions.py  schema.py  snapshot_store.py  view_service.py
src/ingestion/: __init__.py  indexer.py  mapper.py  provider.py  service.py  tasks.py
src/models/: __init__.py  api.py  scip.py
src/rag/: __init__.py  context_resolver.py  conversation.py  graph_retriever.py  intent_classifier.py  llm_client.py  prompt_builder.py  retriever.py  tools.py  vector_store.py
src/research/: engine.py  models.py  prompts.py
src/scip_parser/: __init__.py
src/scip_parser/core/: parser.py  types.py
src/scip_parser/enrich/: adapter.py  enricher.py
src/scip_parser/graph/: call_graph.py  dependency_graph.py  inheritance_graph.py
src/utils/: retry.py
src/wiki/: cache.py  content_generator.py  generator.py  models.py  prompts.py  structure_analyzer.py  tasks.py
(+78 files in other folders)
