[project]
name = "aletheia"
version = "0.1.0"
description = "Code intelligence platform with SCIP-powered knowledge graph"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.7",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "neo4j>=6.1.0",
    "celery>=5.6.2",
    "faiss-cpu>=1.13.2",
    "adalflow>=1.1.3",
    "loguru>=0.7.3",
    "protobuf>=6.33.5",
    "openai>=1.73.0",
    "python-multipart>=0.0.18",
    "anthropic>=0.83.0",
    "google-genai>=1.64.0",
    "networkx>=3.0",
    "redis[hiredis]>=7.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "aioresponses>=0.7.6",
    "black>=26.1.0",
    "ruff>=0.15.0",
    "mypy>=1.19.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "black>=26.1.0",
    "freezegun>=1.5.5",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]
